disable -moz-scrollbars-none, fix #1454 (#1457)

--- a/modules/admin/src/resources/scss/components/_mainnav.scss
+++ b/modules/admin/src/resources/scss/components/_mainnav.scss
@@ -64,8 +64,8 @@
 .mainnav-modules {
     flex: 1 0;
 
-    overflow: auto;
-    overflow: -moz-scrollbars-none; // Firefox
+    overflow-y: auto;
+    //overflow: -moz-scrollbars-none; // Firefox
     &::-webkit-scrollbar {
         display: none; // Safari and Chrome
     }
